--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,24 +1,22 @@
-name: Run API Tests
+name: Reusable API Test Workflow
 
 on:
-  workflow_dispatch:  # Allows manual trigger
-  repository_dispatch:  # Allows trigger from another repository
-    types: [run-tests]  # Custom event name
+  workflow_call:  # Enables reuse
 
 jobs:
-  build:
+  api-tests:
     runs-on: windows-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
 
-    - name: Build with Maven
-      run: mvn test -PSanity
+      - name: Run Sanity API Tests
+        run: mvn test -PSanity
