--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,22 +1,20 @@
-name: Reusable API Test Workflow
+name: Dev Test Workflow
 
 on:
-  workflow_call:  # Enables reuse
+  push:
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
+  workflow_dispatch:
 
 jobs:
-  api-tests:
+  trigger-test:
     runs-on: windows-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      - name: Trigger automated tests in apiAutomation repo
+        uses: peter-evans/repository-dispatch@v2
         with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: maven
-
-      - name: Run Sanity API Tests
-        run: mvn test -PSanity
+          token: ${{ secrets.API_ACCESS_TOKEN }}  # ✅ Securely using the secret
+          repository: MuhammadZeeshan07/apiAutomation
+          event-type: run-tests
+          client-payload: '{"triggered_by": "Dev Repo"}'
