--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,17 +1,22 @@
-name: Run API Tests
+name: Dev Test and Deploy
 
 on:
-  workflow_dispatch:  # Allows manual trigger
-  repository_dispatch:  # Allows trigger from another repository
-    types: [run-tests]  # Custom event name
+  push:
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
+  workflow_dispatch:
 
 jobs:
-  build:
+  run-tests:
     runs-on: windows-latest
 
     steps:
-    - name: Checkout code
+    - name: Checkout Test Repo (apiAutomation)
       uses: actions/checkout@v4
+      with:
+        repository: MuhammadZeeshan07/apiAutomation
+        token: ${{ secrets.API_ACCESS_TOKEN }}
 
     - name: Set up JDK 17
       uses: actions/setup-java@v3
@@ -20,5 +25,17 @@ jobs:
         distribution: 'temurin'
         cache: maven
 
-    - name: Build with Maven
+    - name: Run API Tests
       run: mvn test -PSanity
+
+  deploy:
+    runs-on: windows-latest
+    needs: run-tests
+    if: success()
+
+    steps:
+    - name: Checkout Dev Repo
+      uses: actions/checkout@v4
+
+    - name: Deploy Step
+      run: echo "Deployment started..."
