--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,22 +1,17 @@
-name: Dev Test and Deploy
+name: Run API Tests
 
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
-  workflow_dispatch:
+  workflow_dispatch:  # Allows manual trigger
+  repository_dispatch:  # Allows trigger from another repository
+    types: [run-tests]  # Custom event name
 
 jobs:
-  run-tests:
+  build:
     runs-on: windows-latest
 
     steps:
-    - name: Checkout Test Repo (apiAutomation)
+    - name: Checkout code
       uses: actions/checkout@v4
-      with:
-        repository: MuhammadZeeshan07/apiAutomation
-        token: ${{ secrets.API_ACCESS_TOKEN }}
 
     - name: Set up JDK 17
       uses: actions/setup-java@v3
@@ -25,17 +20,5 @@ jobs:
         distribution: 'temurin'
         cache: maven
 
-    - name: Run API Tests
+    - name: Build with Maven
       run: mvn test -PSanity
-
-  deploy:
-    runs-on: windows-latest
-    needs: run-tests
-    if: success()
-
-    steps:
-    - name: Checkout Dev Repo
-      uses: actions/checkout@v4
-
-    - name: Deploy Step
-      run: echo "Deployment started..."
